objects/TestFeaturePoxy__c/TestFeaturePoxy__c.object-meta.xml
<CustomObject>
    <label>TestFeatureProxy</label>
    <nameField>
        <label>TestFeaturePoxy Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestFeatureProxy</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>