objects/TestFeaturePoxy__c/fields/FeatureId__c.field-meta.xml
<CustomField>
    <fullName>FeatureId__c</fullName>
    <label>FeatureId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>