objects/TestFeaturePoxy__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <description>Module Name</description>
    <label>Module</label>
    <length>255</length>
    <type>Text</type>
</CustomField>