objects/TestFeaturePoxy__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>