objects/TestFeaturePoxy__c/fields/Using__c.field-meta.xml
<CustomField>
    <fullName>Using__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Using</label>
    <type>Checkbox</type>
</CustomField>